<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_export"
        android:title="@string/export_json"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:title="@string/import_json"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_qr_share"
        android:title="@string/qr_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_qr_scan"
        android:title="@string/qr_scan"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_lock_toggle"
        android:title="@string/settings_section_lock"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="always" />
</menu>
